# plasmoid

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  mise.toml
actors/caller/: Cargo.toml
actors/caller/src/: lib.rs
actors/echo/: Cargo.toml
actors/echo/src/: lib.rs
components/caller/: Cargo.toml
components/echo/: Cargo.toml
components/echo/src/: lib.rs
components/ring/: Cargo.toml
components/ring/src/: lib.rs
crates/plasmoid-macros/: Cargo.toml
crates/plasmoid-macros/src/: lib.rs
crates/plasmoid-sdk/: Cargo.toml
crates/plasmoid-sdk/src/: lib.rs  log.rs  messaging.rs  prelude.rs
docs/plans/: 2026-02-20-async-wasm-design.md  2026-02-20-async-wasm-plan.md  2026-02-20-resource-pid-design.md  2026-02-20-resource-pid-plan.md  2026-02-21-plasmoid-sdk-design.md  2026-02-21-process-primitives-and-typed-services-design.md
src/: client.rs  doc_registry.rs  gossip.rs  lib.rs  mailbox.rs  main.rs  message.rs  pid.rs  policy.rs  protocol.rs  registry.rs  wire.rs
src/host/: database.rs  logging.rs  mod.rs  state.rs
src/runtime/: accept.rs  actor.rs  engine.rs  invoke.rs  mod.rs
tests/: e2e_test.rs  host_database_test.rs  host_logging_test.rs  host_test.rs  iroh_test.rs  policy_test.rs  runtime_test.rs  wire_test.rs
wit/: world.wit
wit/actors/: echo.wit
wit/actors/caller/: caller.wit
wit/components/echo/: echo.wit
wit/components/ring/: ring.wit
