[package]
name = "plasmoid"
version = "0.1.0"
edition = "2024"

[dependencies]
# Networking
iroh = "0.96"
iroh-gossip = "0.96"
iroh-docs = "0.96"
iroh-blobs = "0.98"

# Encoding
hex = "0.4"
blake3 = "1"
bytes = "1"
futures-lite = "2"

# WASM Runtime
wasmtime = { version = "41", features = ["component-model", "wave"] }
wasmtime-wasi = "41"

# Authorization
cedar-policy = "4"

# Serialization
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-wave = "0.243"

# Async
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
rand = "0.9"
