[package]
name = "caller-actor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = "0.41"

[package.metadata.component]
package = "plasmoid:caller-actor"

[package.metadata.component.target]
path = "../../wit/actors/caller"
world = "caller-actor"

[package.metadata.component.target.dependencies]
"plasmoid:runtime" = { path = "../../wit/actors/caller/deps/runtime" }
