[package]
name = "echo-actor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = "0.41"

[package.metadata.component]
package = "plasmoid:echo-actor"

[package.metadata.component.target]
path = "../../wit/actors"
world = "echo-actor"

[package.metadata.component.target.dependencies]
"plasmoid:runtime" = { path = "../../wit/actors/deps/runtime" }
