[package]
name = "echo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen-rt = "0.41"

[package.metadata.component]
package = "plasmoid:echo"

[package.metadata.component.target]
path = "../../wit/components/echo"
world = "echo"

[package.metadata.component.target.dependencies]
"plasmoid:runtime" = { path = "../../wit/components/echo/deps/runtime" }
